    chunks of the keyspace (without splitting the new partition from a larger
    partition)

  * Added the DROP TABLE statement

  * Added a thread-local storage and retrieval mechanism for the current
    session. This also adds a new requirement that all operations must be
    executed from within a valid database thread.

  * Added support for setting/overring configuration parameters using the '-C'
    flag in the EventQL client (evql) binary

  * Added the following new configuration options: server.c2s_io_timeout,
    server.c2s_idle_timeout, server.s2s_io_timeout, server.s2s_idle_timeout,
    server.heartbeat_interval, cluster.allowed_hosts, server.http_io_timeout,
    server.query_progress_rate_limit, cluster.allow_anonymous,
    cluster.allow_drop_table, server.query_max_concurrent_shards,
    server.query_max_concurrent_shards_per_host,
    server.query_failed_shard_policy, client.timeout


EventQL v0.3.2 (v0.3.2, gitb0ea6bc) beta; 2016-09-13 15:23:08 +0000

  * Fixed a bug in the eventql client (evql) where missing HOME and USER
    env variables would lead to an assertion on some libc++ implementations

  * Added the client.history_file and client.history_maxlen options to the
    eventql client (evql)


EventQL v0.3.1 (v0.3.1, git2da7f66) beta; 2016-09-04 16:11:19 +0000

  * Fixed a bug in the standalone backend where any ALTER TABLE statements
    would fail with "table already exists"

  * Changed the mapreduce reduce shard allocation so that (in most cases)
    repeated executions of the same job will result in (unchanged) reduce
    shards being scheduled on the same machines as before to improve cache
    hit rates.

  * Changed the default policy for handling failed mapreduce shards from ERROR
    (return an error to the user) to IGNORE (ignore the missing shard and
    continue without it)

  * Changed kDefaultMaxConcurrentTasks (the default maximum number of threads
    to be started for a single sql query) from 32 to 64
